# zshstats

./: README.md  pyproject.toml
zshstats/: cli.py  data.py  filters.py  formatters.py  mappers.py  parsers.py  reducers.py  types.py  utils.py
