[tool.poetry]
name = "zshstats"
version = "0.1.0"
description = ""
authors = ["Travis Hathaway <travis.j.hathaway@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^11.2.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
zshstats = 'zshstats.cli:main'